<resources>
    <string name="app_name">ShopIST</string>
    <string name="pantry">Pantry</string>
    <string name="shopping">Shopping</string>
    <string name="search_for_a_list">Search for a list…</string>
    <string name="action_settings">Settings</string>
    <string name="add_list">Add list</string>
    <string name="list_name">List Name</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="create_ok">Create</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="location">Location</string>
    <string name="pick_location">Pick Location on map</string>
    <string name="use_current_location">Use current location</string>
    <string name="none">None</string>
    <string name="create_list_dialog_title">Create new list</string>
    <string name="choose_a_category_for_the_list">Choose a category for the list</string>
    <string name="choose_a_location_option">Choose a location option</string>
    <string name="create_list_error">Your list must have a name</string>
    <string name="create_new_list">Create new list</string>
    <string name="create_pantry_dialog_title">Create a new pantry list</string>
    <string name="insert_a_code">Insert a code</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="list_options">List options</string>
    <string name="product_name">Product name</string>
    <string name="product_desc">Product Description</string>
    <string name="create_product">Create product</string>
    <string name="delete_list">Delete list</string>
    <string name="sync_with_server">Share</string>
    <string name="insert_image">Insert image</string>
    <string name="total_wanted">Total wanted</string>
    <string name="delete_list_confirmation">Are you sure you want to delete this list?</string>
    <string name="add_product">Add product</string>
    <string name="add_products">Add products</string>
    <string name="confirm">Confirm</string>
    <string name="new_product">New product</string>
    <string name="product_image">Product Image</string>
    <string name="create_product_error">The product must have a name</string>
    <string name="items">items</string>
    <string name="drive_time">minute drive</string>
    <string name="consume">Consume</string>
    <string name="pantry_product_options">Pantry product options</string>
    <string name="available">Available</string>
    <string name="needed">Needed</string>
    <string name="cart">Cart</string>
    <string name="in_cart">In Cart</string>
    <string name="save">Save</string>
    <string name="delete_product">Delete product</string>
    <string name="delete_product_confirmation">Are you sure you want to delete this product?</string>
    <string name="name">Name</string>
    <string name="product">Product</string>
    <string name="product_details">Product Details</string>
    <string name="update">Update</string>
    <string name="scan_product">Scan a product</string>
    <string name="pantries">Pantries</string>
    <string name="stores">Stores</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="create_store_dialog_title">Create a new store list</string>
    <string name="scan">Scan</string>
    <string name="products">Products</string>
    <string name="product_options">Product options</string>
    <string name="edit_product">Edit product</string>
    <string name="scan_code">Scan Code</string>
    <string name="code">Code</string>
    <string name="insert_description">Insert description</string>
    <string name="insert_name">Insert name</string>
    <string name="create_new_product">Create new product</string>
    <string name="scan_a_barcode">Scan a barcode</string>
    <string name="product_already_exists">That product already exists</string>
    <string name="go_to_cart">Go to cart</string>
    <string name="places_api_key" translatable="false">AIzaSyBptQh-aUyc6aa_ywzCFRtSAZY7lxQWpAQ</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="location_permission_denied">Location permissions were denied</string>
    <string name="permission_required_toast">Permission is required</string>
    <string name="permission_rationale_location">Location permission is required</string>
    <string name="no_lists">You don\'t have any shopping lists</string>
    <string name="no_products">You don\'t have any products</string>
    <string name="search_place">Search a place</string>
    <string name="selected_location">Selected Location</string>
    <string name="show_qr_code">Show QR Code</string>
    <string name="sync_icon">Synchronization icon</string>
    <string name="qr_code">QR Code</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="minutes">" minutes away"</string>
    <string name="edit_list">Edit List</string>
    <string name="pick_a_new_location">Pick a new location</string>
    <string name="pantry_details">Pantry details</string>
    <string name="back">Back</string>
    <string name="price_unit">Price / Unit</string>
    <string name="total">Total</string>
    <string name="finish_shopping">Finish Shopping</string>
    <string name="price">Price</string>
    <string name="finish_shopping_confirmation">Are you sure you want to finish shopping in this store and move the items to the pantry?</string>
    <string name="finish">finish</string>
    <string name="select_pantry">Select Pantry</string>
    <string name="loading">Loading…</string>
    <string name="minutes_in_queue">minute(s) in queue</string>
    <string name="choose_a_pantry">Choose a Pantry</string>
    <string name="rate_this_product">Rate this product</string>
    <string name="other_users_rated">Other users rated</string>
    <string name="queue_time_estimation">Queue Estimation Time</string>
    <string name="seconds">Seconds</string>
    <string name="refresh_data">Refresh</string>
    <string name="refreshing">Refreshing…</string>
    <string name="sharing">Sharing…</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="unable_to_get_current_location">Unable to get current location</string>
    <string name="product_not_available_in_pantry">You don\'t have this product available in this pantry</string>
    <string name="you_have_not_picked_an_image">You haven\'t an picked Image</string>
    <string name="select_picture">Select Picture</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="choose_your_image">Choose your image</string>
    <string name="peers_changed_and_beacon_recognized" translatable="false">Peers Changed and beacon recognized</string>
    <string name="peers_changed_and_beacon_no_longer_in_sight" translatable="false">Peers Changed and beacon no longer in sight</string>
    <string name="peers_changed_but_nothing_happened" translatable="false">Peers Changed but nothing happened</string>
    <string name="unable_to_get_last_location">Unable to get last location</string>
    <string name="you_need_the_camera_permission">You need the camera permission</string>
</resources>