<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_addListOverflow"
        android:icon="@drawable/ic_add"
        android:title="@string/add_list"
        app:showAsAction="ifRoom" >

        <menu>
            <item android:id="@+id/action_createProduct"
                android:icon="@drawable/ic_create"
                android:onClick="createNewProduct"
                android:title="@string/create_new_list"/>

            <item android:id="@+id/action_addListCode"
                android:icon="@drawable/ic_add"
                android:title="@string/insert_a_code"/>
        </menu>
    </item>

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never"/>

</menu>