<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/create_product_image"
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/product_image"
        android:src="@drawable/ic_baseline_image_24"></ImageView>

    <Button
        android:id="@+id/create_product_insert_image_button"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="@string/insert_image"
        android:textSize="10sp"
        android:visibility="gone"></Button>

    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/product_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1" />

    <EditText
        android:id="@+id/product_description_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

</LinearLayout>