<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pantry_store_details_name_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="10pt" />

            <EditText
                android:id="@+id/pantry_store_details_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pantry_store_details_name_title"
                android:autofillHints=""
                android:hint="@string/insert_name"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="8pt" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pantry_store_details_desc_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="10pt" />

            <EditText
                android:id="@+id/pantry_store_details_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pantry_store_details_desc_title"
                android:autofillHints=""
                android:hint="@string/insert_description"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="8pt" />
        </RelativeLayout>

        <com.google.android.gms.maps.MapView
            android:id="@+id/pantry_store_details_loc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/pantry_store_details_change_loc_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/pick_a_new_location" />

    </LinearLayout>
</ScrollView>