<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/productItemLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/product_item_clickable_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true">

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:contentDescription="@string/product_image"
                app:srcCompat="@drawable/ic_baseline_fastfood_24" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/storeProdName_tv"
                    android:layout_width="190dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    tools:text="ListItem" />

                <TextView
                    android:id="@+id/storeProdInfoText_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    tools:text="Support Text" />
            </LinearLayout>



        </LinearLayout>

        <Button
            android:id="@+id/addToCart_bt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_to_cart"
            android:textSize="12sp" />

        <ImageButton
            android:id="@+id/store_product_options_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@null"
            android:contentDescription="@string/pantry_product_options"
            android:src="@drawable/ic_baseline_more_vert_24" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>